# epi-scanner

./: .containers-sugar.yaml  .dockerignore  .env.local  .env.tpl  .gitignore  .makim.yaml  .pre-commit-config.yaml  .releaserc.json  .sugar.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  SC_dengue.parquet  app.py  docker-compose.yml  env.tpl  next.config.ts  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.ts  vitest.setup.ts  viz.py
.github/workflows/: linux.yml  release.yaml
conda/: dev.yaml  env-base.yaml
containers/: Dockerfile  compose-base.yaml  compose-dev.yaml  compose-prod.yaml  compose.yaml  docker-compose.yaml
containers/scripts/: entrypoint.sh  healthcheck.sh  poetry-install.sh  tests.sh
containers/wave/: Dockerfile
coverage/: coverage-final.json  lcov.info
coverage/lcov-report/: index.html
coverage/lcov-report/components/charts/: index.html  stat-cards.tsx.html
coverage/lcov-report/components/layout/: footer.tsx.html  header.tsx.html  index.html  sidebar.tsx.html
coverage/lcov-report/components/tables/: index.html  rank-table.tsx.html
coverage/lcov-report/components/ui/: badge.tsx.html  index.html  select.tsx.html  separator.tsx.html  slider.tsx.html  table.tsx.html
coverage/lcov-report/lib/: api-client.ts.html  base-path.ts.html  cache.ts.html  constants.ts.html  index.html  richards.ts.html
data/: RS_dengue.parquet
docker/: .env  Dockerfile  Makefile  docker-compose.yaml
epi_scanner/: __init__.py  app.py  settings.py  viz.py
epi_scanner/data/: AC_dengue.parquet  AL_dengue.parquet  AM_dengue.parquet  AP_dengue.parquet  CE_dengue.parquet  DF_dengue.parquet  ES_dengue.parquet  GO_dengue.parquet  MA_dengue.parquet  MA_zika.parquet  MS_dengue.parquet  MT_dengue.parquet  PA_dengue.parquet  PB_dengue.parquet  PE_dengue.parquet  PI_dengue.parquet  RJ_dengue.parquet  RN_dengue.parquet  RO_dengue.parquet  RR_dengue.parquet  RS_dengue.parquet  SC_dengue.parquet  SE_dengue.parquet  TO_dengue.parquet
epi_scanner/elements/: __init__.py  cards.py  charts.py
epi_scanner/management/: cli.py  export_data.py  fetch_data.py  get_parameters.py
epi_scanner/model/: scanner.py
epi_scanner/tests/: test_fetch_data.py
model/: scanner.py
public/states/: AC.json  AL.json  AM.json  AP.json  BA.json  CE.json  DF.json  ES.json  GO.json  MA.json  MS.json  MT.json  PA.json  PB.json  PE.json  PI.json  PR.json  RJ.json  RN.json  RO.json  RR.json  RS.json  SC.json  SE.json  SP.json  TO.json
scripts/: create_data_parquet.py  create_parquet_from.py  data_to_parquet.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/cities/: route.ts
src/app/api/epidemic-calc/: route.ts
src/app/api/epidemic-calc/__tests__/: route.test.ts
src/app/api/geolocation/: route.ts
src/app/api/maps/model-eval/: route.ts
src/app/api/maps/r0/: route.ts
src/app/api/maps/weeks/: route.ts
src/app/api/parameters/: route.ts
src/app/api/states/: route.ts
src/app/api/timeseries/: route.ts
src/app/api/top-cities/: route.ts
src/app/api/vis/cases/: route.ts
src/app/api/vis/state-cases/: route.ts
src/components/: dashboard.tsx
src/components/charts/: epidemic-calculator.tsx  model-eval-hist.tsx  reported-cases-chart.tsx  stat-cards.tsx  time-series.tsx
src/components/charts/__tests__/: epidemic-calculator.test.tsx  stat-cards.test.tsx  time-series.test.tsx
src/components/layout/: footer.tsx  header.tsx  sidebar.tsx
src/components/layout/__tests__/: footer.test.tsx  header.test.tsx  sidebar.test.tsx
src/components/maps/: fit-bounds.tsx  geo-utils.ts  legend.ts  model-eval-map.tsx  r0-map.tsx  recenter-button.tsx  state-map.tsx  styled-geojson.tsx
src/components/tables/: model-eval-table.tsx  rank-table.tsx  sir-params-table.tsx  top-cities-table.tsx  top-r0-table.tsx
src/components/tables/__tests__/: rank-table.test.tsx
src/components/ui/: badge.tsx  select.tsx  slider.tsx  spinner.tsx
src/components/ui/__tests__/: badge.test.tsx  select-separator.test.tsx  select.test.tsx  slider.test.tsx  table.test.tsx
src/lib/: api-client.ts  base-path.ts  cache.ts  constants.ts  db.ts  leaflet-config.ts  queries.ts  richards.ts  types.ts  utils.ts
src/lib/__tests__/: api-client.test.ts  base-path.test.ts  constants.test.ts  richards.test.ts  utils.test.ts
src/types/: parquetjs.d.ts
visualization/: analise_modelo.ipynb  arbitraria.html
