[tool.poetry]
name = "Episcanner"
version = "1.4.0"  # changed by semantic-release
description = "Dashboard quickstart template"
authors = ["Flávio Codeço Coelho <fccoelho@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/AlertaDengue/epi-scanner"
homepage = "https://github.com/AlertaDengue/epi-scanner"
packages = [{include='epi_scanner'}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
h2o-wave = "0.23.0"
numpy = ">=1.26.4,<2.0.0"
pandas = ">=2.1,<2.2"
pyarrow = ">=11,<16"
psutil = "^5.9.2"
loguru = "^0.6.0"
typing-extensions = "^4.4.0"
lmfit = "^1.1.0"
geopandas = "^0.12.2"
matplotlib = "^3.7.1"
mapclassify = "^2.5.0"
plotly = "^5.13.1"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"
altair = "^5.0.0"
gpdvega = "^0.1.1rc1"
scipy = "^1.7.1"
duckdb = "^0.10.1"
epiweeks = "^2.3.0"
pydantic = "^2.11.2"

[tool.poetry.group.dev.dependencies]
pytest = "*"
coverage = "^6.5.0"
nox = "^2022.8.7"
nox-poetry = "^1.0.1"
autoflake8 = "^0.4.0"
black = "^22.10.0"
pre-commit = "^2.20.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
containers-sugar = "^1.19.2"
makim = "^1.29.0"
virtualenv = "^20.26.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
# https://github.com/psf/black
target-version = ["py311"]
line-length = 79
color = true

exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
    | migrations/*
)/
'''

[tool.isort]
profile = "black"
src_paths = ["isort", "test"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "dirty-tag"
write_to = "epi_scanner/_version.py"
